# light-river

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  generate_data.py  measure_auc.py  python_baseline.py  python_baseline_synthetic.py  python_baseline_synthetic_clf.py  python_baseline_synthetic_reg.py
.github/workflows/: clippy_check.yml  rust.yml
benches/: credit_card.rs  hst.rs
examples/anomaly_detection/: credit_card.rs
examples/classification/: credit_card.rs  keystroke.rs  synthetic.rs
examples/regression/: synthetic_regression.rs
src/: common.rs  lib.rs  main.rs
src/anomaly/: half_space_tree.rs  mod.rs
src/classification/: alias.rs  mod.rs  mondrian_forest.rs  mondrian_node.rs  mondrian_tree.rs
src/datasets/: credit_card.rs  keystroke.rs  mod.rs  synthetic.rs  synthetic_regression.rs  utils.rs
src/metrics/: accuracy.rs  confusion.rs  mod.rs  rocauc.rs  traits.rs
src/mondrian_forest/: alias.rs  mod.rs  mondrian_forest.rs  mondrian_node.rs  mondrian_tree.rs  mondrian_tree_clf.rs  mondrian_tree_reg.rs
src/regression/: mod.rs  mondrian_forest.rs
src/stream/: data_stream.rs  iter_csv.rs  mod.rs
